--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,7 @@ Repository = "https://github.com/herrkaefer/tinymolty"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["llm", "moltbook", "setup", "telegram", "ui"]
+py-modules = ["__main__", "app", "bot_engine", "config", "scheduler"]
