add feed_sort and feed_limit configs

--- a/config.example.toml
+++ b/config.example.toml
@@ -29,6 +29,8 @@ post_cooldown_minutes = 60
 comment_cooldown_minutes = 5
 browse_interval_minutes = 15
 heartbeat_interval_hours = 4
+feed_sort = "new"                # "new" | "hot" | "both"
+feed_limit = 25
 max_comments_per_day = 30
 max_posts_per_day = 10
 preferred_submolts = ["technology", "philosophy"]
